Updated de, ko, nl, sk, zh

--- a/CustomRPC/About.sk.resx
+++ b/CustomRPC/About.sk.resx
@@ -128,6 +128,6 @@
     <value>Zatvoriť</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Info</value>
+    <value>Informácie</value>
   </data>
 </root>
