--- a/CustomRPC/Strings.pl.resx
+++ b/CustomRPC/Strings.pl.resx
@@ -208,6 +208,6 @@ Nie da się tego cofnąć.</value>
     <value>Ogląda</value>
   </data>
   <data name="presenceTypeCompeting" xml:space="preserve">
-    <value>Rywalizuje w</value>
+    <value>Rywalizuje</value>
   </data>
 </root>
