--- a/CustomRPC/Strings.zh-Hant.resx
+++ b/CustomRPC/Strings.zh-Hant.resx
@@ -192,11 +192,11 @@
   </data>
   <data name="newPresetConfirmation" xml:space="preserve">
     <value>您確定要重新開始嗎？
-此項行為無法復原。</value>
+這項行為無法復原。</value>
   </data>
   <data name="deleteSettings" xml:space="preserve">
     <value>您想刪除應用程式的設定嗎？
-此操作無法撤銷。</value>
+這項行為無法復原。</value>
   </data>
   <data name="presenceTypePlaying" xml:space="preserve">
     <value>正在玩</value>
