--- a/CustomRPC/MainForm.bg.resx
+++ b/CustomRPC/MainForm.bg.resx
@@ -305,7 +305,7 @@
     <value>229, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>Относно програмата...</value>
+    <value>За програмата...</value>
   </data>
   <data name="downloadUpdateToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>174, 20</value>
@@ -470,5 +470,14 @@
   </data>
   <data name="labelType.ToolTip" xml:space="preserve">
     <value>Тип на активност за статус.</value>
+  </data>
+  <data name="labelName.ToolTip" xml:space="preserve">
+    <value>Името на приложението</value>
+  </data>
+  <data name="radioButtonLastConnection.Text" xml:space="preserve">
+    <value>Последна връзка</value>
+  </data>
+  <data name="radioButtonLastConnection.ToolTip" xml:space="preserve">
+    <value>Показва колко време е минало от последна връзка</value>
   </data>
 </root>
